cartopy/docs/v0.16/_sources/gallery/tissot.rst.txt


.. _sphx_glr_gallery_tissot.py:


Tissot's Indicatrix
-------------------

Visualize Tissot's indicatrix on a map.





.. image:: /gallery/images/sphx_glr_tissot_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt

    import cartopy.crs as ccrs


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())

        # make the map global rather than have it zoom in to
        # the extents of any plotted data
        ax.set_global()

        ax.stock_img()
        ax.coastlines()

        ax.tissot(facecolor='orange', alpha=0.4)

        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  0.119 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: tissot.py <tissot.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: tissot.ipynb <tissot.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
